syntax = "proto3";

message ProductDetail{
    string productId = 1;
    int32 quantity = 2;
}

message Order{
    string id = 1;
    string userId = 2;
    repeated ProductDetail products = 3;
    float price = 4;
}

message CreateOrderRequest{
    string userId = 1;
    repeated ProductDetail products = 2;
}

message OrderId{
    string id = 1;
}

message UserId{
    string id = 1;
}

message ListOrder{
    repeated Order orders = 1;
}

message GetAllOrdersRequest {
    int32 page = 1;
    int32 limit = 2;
}

message OrderListResponse {
    int32 page = 1;
    int32 limit = 2;
    int32 total = 3;
    int32 totalPage = 4;
    repeated Order orders = 5;
}

service OrderService{
    rpc GetOrdersByUserId(UserId) returns (ListOrder);
    rpc GetOrderById(OrderId) returns (Order);
    rpc CreateOrder(CreateOrderRequest) returns (Order);
    rpc UpdateOrder(Order) returns (Order);
    rpc DeleteOrder(OrderId) returns (Order);
    rpc GetAllOrders(GetAllOrdersRequest) returns (OrderListResponse);
}



