syntax = "proto3";

message Product{
    string id = 1;
    string name = 2;
    string description = 3;
    float price = 4;
    int32 stock = 5;
}

message ProductListResponse{
    int32 page = 1;
    int32 limit = 2;
    int32 total = 3;
    int32 totalPage = 4;
    string search = 5;
    repeated Product products = 6;
}

message ProductId{
    string id = 1;
}

message ProductListRequest{
    int32 page = 1;
    int32 limit = 2;
    string search = 3;
}


service ProductService{
    rpc GetProduct(ProductId) returns (Product);
    rpc GetProductList(ProductListRequest) returns (ProductListResponse);
    rpc CreateProduct(Product) returns (Product);
    rpc UpdateProduct(Product) returns (Product);
    rpc DeleteProduct(Product) returns (Product);
}